# selenium-docker

./: .env-sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: application.py
config/: config.py
