[tool.poetry]
name = "selenium-docker"
version = "0.1.0"
description = "Some project for selenium in docker"
authors = ["Ramil Aleshkin <rraleshk@mts.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
selenium-wire = "^4.5.4"
packaging = "^21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
